--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<!DOCTYPE html>
+<html>
+  <body>
+   <h2> I like floofy birbs and smoking anime everyday </h2>
+  </body>
+</html>
+  
 
-I like floofy birbs and smoking anime everyday
