--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
    <h2> I like floofy birbs and smoking anime everyday </h2>
+    <img> src="test_birb.jpg" </img>
   </body>
 </html>
   
