--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <body>
    <h2> I like floofy birbs and smoking anime everyday </h2>
+   <h2> Dis is a message from the floof :3 </h2>
     <img src="test birb.jpg" alt="BirbBroke1" style="width:530px,height:775px;" >
   </body>
 </html>
